src/test/deca/context/invalid/created/declVar/decl_var_type_not_found.deca
// Description :
// simple declaration of a variable with an undefined type
//
// Resultats :
//  Error Ligne 7 : Type not defined
{
	A a;
}
